--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@
 
         // AUTH
         function handleAuthClick() {
-            if (CONFIG.CLIENT_ID === '567555578754-nsqdiab9suu01a9i1mdgc30vf5g9rq2k.apps.googleusercontent.com') {
+            if (CONFIG.CLIENT_ID === 'YOUR_CLIENT_ID.apps.googleusercontent.com') {
                 showStatus('Błąd: Ustaw CLIENT_ID w kodzie!', 'error');
                 return;
             }
