--- a/login.html
+++ b/login.html
@@ -226,8 +226,8 @@
             <p class="app-subtitle">Twój partner w interesach</p>
 
             <p class="app-description">
-                Zaloguj się kontem Google, aby pracować na swoim arkuszu z firmami i kontaktami.
-                Dodawaj firmy, osoby kontaktowe, historię współpracy i śledź wszystkie zmiany jak w prawdziwym CRM.
+                Zaloguj się kontem Google, aby korzystać z Simplify CRM.
+                Dodawaj firmy, kontakty, historię współpracy i śledź wszystkie działania w jednym, uporządkowanym miejscu.
             </p>
 
             <button id="loginBtn" class="google-btn" disabled>
