--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Dashboard - Simplify CRM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="./styles/base.css">
         <link rel="stylesheet" href="./styles/dashboard.css">
 
 </head>
@@ -12,7 +13,7 @@
     <!-- HEADER -->
     <header class="app-header">
         <div class="app-header-inner">
-            <div class="app-logo" onclick="window.location.reload()">
+            <div class="app-logo">
                 Simplify CRM
             </div>
             <div class="app-header-right">
