--- a/modules/relationships.html
+++ b/modules/relationships.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- FONTS & STYLES -->
+        <link rel="stylesheet" href="../styles/base.css">
         <link rel="stylesheet" href="../styles/relationships.css">
 
 </head>
@@ -14,7 +15,7 @@
     <header class="app-header">
         <div class="app-header-inner">
             <div class="app-header-left">
-                <div class="app-logo" onclick="window.location.href='../index.html'">Simplify CRM</div>
+                <div class="app-logo">Simplify CRM</div>
                 <div class="app-logo-subtitle">Moduł: Relacje</div>
             </div>
             <div class="app-header-right">
